--- a/Blog_App/templates/Blog_App/post_draft_list.html
+++ b/Blog_App/templates/Blog_App/post_draft_list.html
@@ -1,11 +1,15 @@
 {% extends "Blog_App/base.html" %}
 {% block content %}
-  {% for post in post_list %}
-    <div class="post">
-      <h1><a href="{% url 'Blog_App:post_detail' pk=post.pk %}">{{post.title}}</a></h1>
-      <p class="date">Created: {{post.create_date}}</p>
-      <p>{{post.text|truncatechars:300}}</p>
-      <br>
-    </div>
-  {% endfor %}
+  {% if post_list %}
+    {% for post in post_list %}
+      <div class="post">
+        <h1><a href="{% url 'Blog_App:post_detail' pk=post.pk %}">{{post.title}}</a></h1>
+        <p class="date">Created: {{post.create_date}}</p>
+        <p>{{post.text|truncatechars:300}}</p>
+        <br>
+      </div>
+    {% endfor %}
+  {% else %}
+    <p>Draft list is empty!</p>
+  {% endif %}
 {% endblock %}
