--- a/User_Registration_App/templates/User_Registration_App/profile.html
+++ b/User_Registration_App/templates/User_Registration_App/profile.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<form method="post"> {{ csrf_token }}
+<form method="post" enctype="multipart/form-data"> {% csrf_token %}
   {{ form1|crispy }}
   {{ form2|crispy }}
   <input type="submit" value="Update">
