--- a/Blog_App/templates/Blog_App/base.html
+++ b/Blog_App/templates/Blog_App/base.html
@@ -35,6 +35,9 @@
         <li>
           <a href="{% url 'Blog_App:post_draft_list' %}">Drafts</a>
         </li>
+        <li>
+          <a href="{% url 'Blog_App:profile' %}">My Profile</a>
+        </li>
         <li><a href="{% url 'logout' %}">Log Out</a></li>
         <li>
           <a>Welcome: {{user.username}}</a>
