--- a/Blog_App/templates/Blog_App/post_list.html
+++ b/Blog_App/templates/Blog_App/post_list.html
@@ -6,6 +6,7 @@
       <h1> <a href="{% url 'Blog_App:post_detail' pk=post.pk %}">{{post.title}}</a> </h1>
       <p>{{post.text|truncatechars:400}}</p>
       <div class="date">
+        <p>Published by: {{post.author}}</p>
         <p>Published on: {{post.published_date|date:"D M Y"}}</p>
       </div>
       <a href="{% url 'Blog_App:post_detail' pk=post.pk %}">Comments: {{post.approve_comments.count}}</a>
