--- a/Blog_App/templates/Blog_App/post_confirm_delete.html
+++ b/Blog_App/templates/Blog_App/post_confirm_delete.html
@@ -1,7 +1,8 @@
 {% extends "Blog_App/base.html" %}
 {% block content %}
   <form method="post">{% csrf_token %}
-    <p>Are you sure you want to delete {{object}}?</p>
+    <p>Are you sure you want to delete {{object}}</p>
     <input type="submit" value="Confirm" class="btn btn-danger">
+    <a href="{% url "Blog_App:post_detail" object.pk %}">Nope</a>
   </form>
 {% endblock %}
