--- a/User_Registration_App/templates/User_Registration_App/profile.html
+++ b/User_Registration_App/templates/User_Registration_App/profile.html
@@ -5,7 +5,7 @@
 <form method="post" enctype="multipart/form-data">{% csrf_token %}
   {{ form1|crispy }}
   {{ form2|crispy }}
-  <input type="submit" value="Update">
+  <button type="submit">Update</button>
 </form>
 
 {% endblock %}
