Created pagination for PostListView and created UserPostListView to view all posts by a particular user

--- a/Blog_App/templates/Blog_App/user_post_list.html
+++ b/Blog_App/templates/Blog_App/user_post_list.html
@@ -1,13 +1,16 @@
 {% extends "Blog_App/base.html" %}
 {% block content %}
 
+<p>Posts by {{view.kwargs.username}}</p>
+<p>You can contact me on my mail {{usermail}}</p>
+
 <div class="centerstage">
-  {% for post in post_list %}
+  {% for post in user_post_list %}
     <div class="post">
       <h1> <a href="{% url 'Blog_App:post_detail' pk=post.pk %}">{{post.title}}</a> </h1>
       <p>{{post.text|truncatechars:400}}</p>
       <div class="date">
-        <p>Published by: <a href="{% url 'Blog_App:user_post_list' username=post.author %}">{{post.author}}</a></p>
+        <p>Published by: {{post.author}}</p>
         <p>Published on: {{post.published_date|date:"D M Y"}}</p>
       </div>
       <a href="{% url 'Blog_App:post_detail' pk=post.pk %}">Comments: {{post.approve_comments.count}}</a>
