Added image field to post model and forms.py so that users can add image to created post

--- a/Blog_App/templates/Blog_App/post_detail.html
+++ b/Blog_App/templates/Blog_App/post_detail.html
@@ -3,6 +3,9 @@
 {% block content %}
   <hr>
   <h1 class="posttitle loader">{{post.title}}</h1>
+  {% if post.image %}
+    <img src="{{post.image.url}}" alt="PostImage">
+  {% endif %}
   {% if post.published_date %}
     <div class="date postdate">
       {{post.published_date}}
