deleted and modified the database

--- a/Blog_App/templates/Blog_App/user_post_list.html
+++ b/Blog_App/templates/Blog_App/user_post_list.html
@@ -1,7 +1,7 @@
 {% extends "Blog_App/base.html" %}
 {% block content %}
 
-<p>Posts by {{view.kwargs.username}}</p>
+<h1>Posts by {{view.kwargs.username}}</h1>
 <p>You can contact me on my mail {{usermail}}</p>
 
 <div class="centerstage">
