--- a/Blog_App/templates/Blog_App/post_form.html
+++ b/Blog_App/templates/Blog_App/post_form.html
@@ -2,12 +2,8 @@
 {% load crispy_forms_tags %}
 {% block content %}
   <h1>New Post</h1>
-  <form class="post-form" method="post">{% csrf_token %}
+  <form class="post-form" method="post" enctype="multipart/form-data">{% csrf_token %}
       {{form|crispy}}
-      <button type="submit" class="save btn btn-default">Save</button>
+      <button type="submit">Save</button>
   </form>
-
-  <script>
-    var editor = new MediumEditor('.edtible');
-  </script>
   {% endblock %}
