--- a/Blog_App/templates/Blog_App/post_list.html
+++ b/Blog_App/templates/Blog_App/post_list.html
@@ -5,6 +5,9 @@
   {% for post in post_list %}
     <div class="post">
       <h1> <a href="{% url 'Blog_App:post_detail' pk=post.pk %}">{{post.title}}</a> </h1>
+      {% if post.image %}
+        <img src="{{post.image.url}}" alt="PostImage">
+      {% endif %}
       <p>{{post.text|truncatechars:400}}</p>
       <div class="date">
         <p>Published by: <a href="{% url 'Blog_App:user_post_list' username=post.author %}">{{post.author}}</a></p>
@@ -15,27 +18,28 @@
   {% endfor %}
 </div>
 
-<div class="paginator">
+<footer style="text-align:center">
+  <div class="paginator">
 
-  {% if is_paginated %}
+    {% if is_paginated %}
 
-    {% if page_obj.has_previous %}
-      <a href="?page=1">First</a>
-      <a href="?page={{page_obj.previous_page_number}}">{{page_obj.previous_page_number}}</a>
-    {% endif %}
-
-    {% for num in page_obj.paginator.page_range %}
-      {% if page_obj.number == num %}
-        <a href="?page={{num}}">{{num}}</a>
+      {% if page_obj.has_previous %}
+        <a href="?page=1">First</a>
+        <a href="?page={{page_obj.previous_page_number}}">{{page_obj.previous_page_number}}</a>
       {% endif %}
-    {% endfor %}
 
-    {% if page_obj.has_next %}
-      <a href="?page={{page_obj.next_page_number}}">{{page_obj.next_page_number}}</a>
-      <a href="?page={{page_obj.paginator.num_pages}}">Last</a>
+      {% for num in page_obj.paginator.page_range %}
+        {% if page_obj.number == num %}
+          <a href="?page={{num}}">{{num}}</a>
+        {% endif %}
+      {% endfor %}
+
+      {% if page_obj.has_next %}
+        <a href="?page={{page_obj.next_page_number}}">{{page_obj.next_page_number}}</a>
+        <a href="?page={{page_obj.paginator.num_pages}}">Last</a>
+      {% endif %}
     {% endif %}
-
-  {% endif %}
-</div>
+  </div>
+</footer>
 
 {% endblock %}
